--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,53 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 html,
 body {
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
 }
 
 aside {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: #1D272F;
+    background-color: #2F3D48;
     width: 300px;
     height: 100vh;
     z-index: 2;
+}
+
+.control-container {
+    background-color: #1D272F;
+    height: calc(15vh - 1px);
+    border-bottom: 1px solid black;
+}
+
+.control-container input {
+    display: block;
+    margin: 0 auto;
+}
+
+ul {
+    list-style-type: none;
+    padding-left: 1em;
+}
+
+li {
+    margin: 1em;
+    color: #999999;
+}
+
+li:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.restaurant-list-container {
+    height: 85vh;
+    overflow-y: auto;
+    position: relative;
 }
 
 #map {
