--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 300;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -39,7 +39,13 @@ li {
     color: #999999;
 }
 
-li:hover {
+.selected {
+    color: white;
+    font-weight: 600;
+}
+
+li:hover,
+li:focus {
     cursor: pointer;
     color: white;
 }
