--- a/css/styles.css
+++ b/css/styles.css
@@ -45,13 +45,23 @@ aside {
 
 .location-container {
     color: white;
-    height: calc(13vh - 1px);
+    height: calc(20vh - 1px);
     border-bottom: 1px solid black;
     padding-left: 1.5em;
 }
 
+input {
+    border-radius: 5px;
+}
+
+input,
+select,
+#custom-handle {
+    outline: none;
+}
+
 #country-list {
-    width: 100px;
+    width: 150px;
 }
 
 .control-container {
@@ -61,15 +71,18 @@ aside {
     padding-left: 1.5em;
 }
 
-.control-container p {
+.control-container label,
+.location-container label:nth-of-type(1),
+.location-container p {
+    display: block;
     margin: 0;
     padding: 0.5em 0;
     color: white;
 }
 
-#price-slider {
+#cost-slider {
     width: 250px;
-    margin-top: 15px;
+    margin-top: 8px;
 }
 
 #custom-handle {
