--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 100;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -43,10 +43,49 @@ aside {
     transition: 0.3s width;
 }
 
+.toggle {
+    background-color: #26323C;
+    height: 40px;
+    color: #999;
+    border-bottom: 1px solid black;
+    border-top: 1px solid black;
+}
+
+.toggle:hover {
+    color: white;
+}
+
+.toggle:hover .arrow-down {
+    fill: white;
+}
+
+.toggle p,
+svg {
+    align-self: center;
+}
+
+.toggle p {
+    margin: 1.5em;
+}
+
+.toggle-flex {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .location-container {
     color: white;
-    height: calc(20vh - 1px);
-    border-bottom: 1px solid black;
+    height: calc(28vh - 1px);
+    transition: 0.5s height ease;
+}
+
+.item-container p {
+    margin: 0.5em 0;
+}
+
+.item-container,
+#restaurant {
     padding-left: 1.5em;
 }
 
@@ -64,16 +103,14 @@ select,
     width: 150px;
 }
 
-.control-container {
+.filter-container {
     background-color: #2F3D48;
-    height: calc(26vh - 1px);
-    border-bottom: 1px solid black;
-    padding-left: 1.5em;
+    height: calc(31vh - 1px);
+    transition: 0.5s height ease;
 }
 
-.control-container label,
-.location-container label:nth-of-type(1),
-.location-container p {
+.filter-container label,
+.location-container label:nth-of-type(1) {
     display: block;
     margin: 0;
     padding: 0.5em 0;
@@ -94,7 +131,7 @@ select,
     line-height: 1.6em;
 }
 
-.control-container a {
+.filter-container a {
     font-size: 1em;
     border: 1px solid #999;
     background-color: white;
@@ -112,13 +149,23 @@ select,
     font-size: 1em;
 }
 
+.restaurant-container {
+    height: 34vh;
+    transition: 0.5s height ease;
+}
+
+#restaurant {
+    height: calc(34vh - 40px);
+    overflow-y: auto;
+}
+
 ul {
     list-style-type: none;
-    padding-left: 1em;
+    padding: 0;
 }
 
 li {
-    margin: 1em;
+    margin: 1em 0 1em 0;
     color: #999;
 }
 
@@ -133,10 +180,8 @@ li:focus {
     color: white;
 }
 
-.restaurant-list-container {
-    height: 49vh;
-    overflow-y: auto;
-}
+
+/* CSS for animation */
 
 .slide {
     width: 0;
@@ -146,6 +191,18 @@ li:focus {
 
 .hide {
     visibility: hidden;
+}
+
+.close {
+    max-height: 0;
+    transition: 0.3s height, 0.3s visibility;
+}
+
+#location,
+#filter,
+#restaurant {
+    height: calc(100% - 40px);
+    transition: 0.5s width ease;
 }
 
 #map {
