Changes made:     - Create a functionality that converts PHP cost filter to other     country's currencies.         * Create a list of currencies from list of countries that         Zomato supports.         * Set currency when user selects/provides a location.         * Use third-party API to convert currencies apart from PHP.

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,12 @@ select,
     width: 20px;
 }
 
+.disable-link {
+    pointer-events: none;
+    cursor: default;
+    background-color: grey !important;
+}
+
 #category-list,
 #country-list,
 #city_autocomplete {
