Change made:     - HTML Rework         * Add DOCTYPE tag         * Add alt attribute to img tags.         * Add error handler if loading of map fails.         * Check overall HTML code using HTML validator.

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ select,
 }
 
 .filter-container label,
+.filter-container span,
 .location-container label:nth-of-type(1) {
     display: block;
     margin: 0;
