Changes made:     - Refactor app.js Pt.4         > Update implementation of enabling and disabling the previous/next         button to use knockout css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,7 +151,7 @@ select,
     width: 20px;
 }
 
-.disable-link {
+.disable {
     pointer-events: none;
     cursor: default;
     background-color: grey !important;
